spacing fixed

--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,7 @@ hr {
     top: 0;
     right: 0;
     /* border: 2px solid red; */
-    margin:0 auto;
+    margin:0;
     width:100%;
     z-index:0;
     opacity: 0%;
